[package]
name = "plotters-canvas-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["wasmbind"], default-features = false }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.30"
plotters = "0.3.1"
plotters-canvas = "0.3.0"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlCollection",
  "NodeList",
  "Window",
]
